--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "vue-js-modal": "^2.0.1",
+        "vue-notification": "^1.3.20",
+        "vuedraggable": "^2.24.3"
     }
 }
